--- a/tex/before_workshop.tex
+++ b/tex/before_workshop.tex
@@ -2,28 +2,7 @@
 
 \section{وظایف}
 
-\subsection{عنوان وظیفه}
-\subsubsection{افراد مرتبط}
-سید محمد حسینی، عرفان لقمانی
-\begin{enumerate}
-	\item هماهنگی استاد
-	\item هماهنگی ناهار
-\end{enumerate}
 
-\subsubsection{خوبی ها}
-\begin{enumerate}
-	\item هماهنگی به موقع با استاد
-	\item تخمین مناسب برای تعداد افراد ناهار خور :)
-\end{enumerate}
+\renewcommand{\do}[1]{\input{"tex/task_before/#1.tex"}}
 
-\subsubsection{بدی ها}
-\begin{enumerate}
-	\item کمبود نیروی انسانی برای  آوردن ناهار
-	\item  سلندری در عین کمبود وقت!
-\end{enumerate}
-
-\subsubsection{راهکار ها}
-\begin{enumerate}
-	\item زیاد کردن نیروی انسانی برای آوردن ناهار
-	\item برنامه ریزی مناسب
-\end{enumerate}
+\docsvlist{task1}
