multi task added

--- a/tex/before_workshop.tex
+++ b/tex/before_workshop.tex
@@ -3,6 +3,6 @@
 \section{وظایف}
 
 
-\renewcommand{\do}[1]{\input{"tex/task_before/#1.tex"}}
+\renewcommand*{\do}[1]{\input{"tex/task_before/#1.tex"}}
 
-\docsvlist{task1}
+\docsvlist{task1, task2, task3}
