--- a/mystyle.sty
+++ b/mystyle.sty
@@ -2,18 +2,30 @@
 
 \usepackage{etoolbox}
 
-\global\def\وظیفه #1 {\def\task_title{#1}}
+\newcounter{preTaskCounter}
 
-\newcommand{\مجری}[2]{\listgadd\users{#1}\listgadd\tasks{#2}}
-\newcommand{\خوبی}[1]{\listgadd\pros{#1}}
-\newcommand{\بدی}[2]{\listgadd\cons{#1}\listgadd\proofs{#2}}
+\newcommand{\وظیفه}[1]{
+	\ifdef{\users}{\renewcommand*{\users}{}}{\newcommand*{\users}{}}
+	\ifdef{\tasks}{\renewcommand*{\tasks}{}}{\newcommand*{\tasks}{}}
+	\ifdef{\pros}{\renewcommand*{\pros}{}}{\newcommand*{\pros}{}}
+	\ifdef{\cons}{\renewcommand*{\cons}{}}{\newcommand*{\cons}{}}
+	\ifdef{\proofs}{\renewcommand*{\proofs}{}}{\newcommand*{\proofs}{}}
+	\ifdef{\tasktitle}{\renewcommand*{\tasktitle}{#1}}{\newcommand*{\tasktitle}{#1}}
+	\stepcounter{preTaskCounter}
+	 }
+
+\newcommand{\مجری}[2]{\listadd{\users}{#1}\listadd{\tasks}{#2}}
+\newcommand{\خوبی}[1]{\listadd{\pros}{#1}}
+\newcommand{\بدی}[2]{\listadd{\cons}{#1}\listadd{\proofs}{#2}}
 
 \global\def\بساز {
-	\subsection{\task_title}
+	\subsection{\tasktitle}
 
 	\subsubsection{افراد مرتبط}
-	\renewcommand*{\do}[1]{##1، }
-	\dolistloop{\users}
+	\begin{large}
+		\renewcommand*{\do}[1]{##1، }
+		\dolistloop{\users}
+	\end{large}
 	\begin{enumerate}
 		\renewcommand*{\do}[1]{\item ##1}
 		\dolistloop{\tasks}
@@ -37,8 +49,7 @@
 		\dolistloop{\proofs}
 	\end{enumerate}
 
-	
-	\global\def\task_title{} }
+	}
 
 
 \usepackage{xepersian}
