in workshop file template created

--- a/tex/in_workshop.tex
+++ b/tex/in_workshop.tex
@@ -1,2 +1,32 @@
-\chapter{کار های حین ورکشاپ}
+\chapter{کارهای حین ورکشاپ}
 
+\section{ورکشاپ های ۱ روزه}
+
+\subsubsection{توضیح کلی}
+\input{"tex/one_day_workshop.tex"}
+
+\subsection{ورکشاپ متلب}
+\subsubsection{توضیح کلی}
+\begin{center}
+\begin{tabularx}{\textwidth}{XXX}
+تاریخ: ۹۴/۳/۶ & استاد: نام استاد & تعداد شرکت کنندگان: چند نفر
+\end{tabularx}
+\end{center}
+توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب
+\subsubsection{خوبی ها}
+\begin{enumerate}
+	\item خوبی ۱
+\end{enumerate}
+\subsubsection{بدی ها}
+\begin{enumerate}
+	\item بدی ۱
+\end{enumerate}
+\subsubsection{راهکارها}
+\begin{enumerate}
+	\item راهکار ۱
+\end{enumerate}
+
+\section{ورکشاپ های ۱ روزه}
+
+\subsubsection{توضیح کلی}
+\input{"tex/three_day_workshop.tex"}
