--- a/tex/in_workshop.tex
+++ b/tex/in_workshop.tex
@@ -3,30 +3,13 @@
 \section{ورکشاپ های ۱ روزه}
 
 \subsubsection{توضیح کلی}
-\input{"tex/one_day_workshop.tex"}
+\input{"tex/one_day/description.tex"}
 
-\subsection{ورکشاپ متلب}
-\subsubsection{توضیح کلی}
-\begin{center}
-\begin{tabularx}{\textwidth}{XXX}
-تاریخ: ۹۴/۳/۶ & استاد: نام استاد & تعداد شرکت کنندگان: چند نفر
-\end{tabularx}
-\end{center}
-توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب توضیحات مربوط به ورکشاپ متلب
-\subsubsection{خوبی ها}
-\begin{enumerate}
-	\item خوبی ۱
-\end{enumerate}
-\subsubsection{بدی ها}
-\begin{enumerate}
-	\item بدی ۱
-\end{enumerate}
-\subsubsection{راهکارها}
-\begin{enumerate}
-	\item راهکار ۱
-\end{enumerate}
+\input{"tex/one_day/workshops.tex"}
 
-\section{ورکشاپ های ۱ روزه}
+\section{ورکشاپ های ۳ روزه}
 
 \subsubsection{توضیح کلی}
-\input{"tex/three_day_workshop.tex"}
+\input{"tex/three_day/description.tex"}
+
+\input{"tex/three_day/workshops.tex"}
